--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 .container {
-  min-width: 80%;
+  width: 80%;
   margin: auto;
 }
 
@@ -347,3 +347,37 @@ h3 {
   z-index: -1;
 }
 /* .......................About............... */
+
+/* .......................Services............. */
+.services {
+  text-align: center;
+  background-color: #f8f9fe;
+  padding: 50px 0;
+}
+
+.services .box {
+  text-align: left;
+}
+
+.services img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.services .text {
+  background-color: #fff;
+  box-shadow: 0px 5px 20px 0 rgba(0, 0, 0, 6%);
+  padding: 30px;
+  margin: 20px;
+  margin-top: -30px;
+  position: relative;
+  z-index: 1;
+}
+
+.services .text h2 {
+  font-weight: 500;
+  font-size: 22px;
+  margin-bottom: 20px;
+}
+/* .......................Services............. */
