--- a/src/App.css
+++ b/src/App.css
@@ -178,48 +178,48 @@ header.active {
 }
 
 .instagram {
-  color: #F70055;
-  border: 1px solid #F70055;
+  color: #f70055;
+  border: 1px solid #f70055;
 }
 
 .instagram:hover {
-  background-color: #F70055;
+  background-color: #f70055;
 }
 
 .twitter {
-  color: #1DA1F2;
-  border: 1px solid #1DA1F2;
+  color: #1da1f2;
+  border: 1px solid #1da1f2;
 }
 
 .twitter:hover {
-  background-color: #1DA1F2;
+  background-color: #1da1f2;
 }
 
 .youtube {
-  color: #FE0000;
-  border: 1px solid #FE0000;
+  color: #fe0000;
+  border: 1px solid #fe0000;
 }
 
 .youtube:hover {
-  background-color: #FE0000;
+  background-color: #fe0000;
 }
 
 .pinterest {
-  color: #B7081B;
-  border: 1px solid #B7081B;
+  color: #b7081b;
+  border: 1px solid #b7081b;
 }
 
 .pinterest:hover {
-  background-color: #B7081B;
+  background-color: #b7081b;
 }
 
 .dribble {
-  color: #E04B85;
-  border: 1px solid #E04B85;
+  color: #e04b85;
+  border: 1px solid #e04b85;
 }
 
 .dribble:hover {
-  background-color: #E04B85;
+  background-color: #e04b85;
 }
 
 button {
@@ -325,7 +325,6 @@ h3 {
   padding-left: 30px;
 }
 
-
 .about .img {
   position: relative;
   display: block;
@@ -333,7 +332,6 @@ h3 {
   margin-right: auto;
   width: 50%;
 }
-
 
 .about .img::after {
   content: "";
@@ -449,7 +447,7 @@ h3 {
   margin-bottom: 20px;
 }
 
-.skill .right p{
+.skill .right p {
   margin-bottom: 20px;
 }
 /* .......................Skill............. */
@@ -492,4 +490,133 @@ h3 {
   grid-template-rows: repeat(8, 5vw);
 }
 
+.work .box:nth-child(1) {
+  grid-column-start: 1;
+  grid-column-end: 5;
+  grid-row-start: 1;
+  grid-row-end: 5;
+}
+
+.work .box:nth-child(2) {
+  grid-column-start: 5;
+  grid-column-end: 7;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+
+.work .box:nth-child(3) {
+  grid-column-start: 7;
+  grid-column-end: 9;
+  grid-row-start: 1;
+  grid-row-end: 4;
+}
+
+.work .box:nth-child(4) {
+  grid-column-start: 1;
+  grid-column-end: 3;
+  grid-row-start: 8;
+  grid-row-end: 8;
+}
+
+.work .box:nth-child(5) {
+  grid-column-start: 3;
+  grid-column-end: 5;
+  grid-row-start: 8;
+  grid-row-end: 8;
+}
+
+.work .box:nth-child(6) {
+  grid-column-start: 5;
+  grid-column-end: 9;
+  grid-row-start: 8;
+  grid-row-end: 8;
+}
+
+.work img {
+  width: 100%;
+  height: 550px;
+  object-fit: cover;
+}
+
+.work .box {
+  position: relative;
+  color: #fff;
+  height: 550px;
+}
+
+.overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
+  flex-wrap: wrap;
+  pad: 50px;
+  position: absolute;
+  top: 25%;
+  left: 0;
+  margin: auto;
+  opacity: 0;
+}
+
+.work .box:hover .overlay {
+  opacity: 1;
+  cursor: pointer;
+}
+
+.work .box::after {
+  position: absolute;
+  content: "";
+  top: 0;
+  left: 0;
+  opacity: 0;
+  transition: 0.5s;
+}
+
+.work .box:nth-child(5)::after,
+.work .box:nth-child(4)::after,
+.work .box:nth-child(3)::after,
+.work .box:nth-child(2)::after {
+  width: 380px;
+  height: 550px;
+  background-color: rgba(18, 22, 25, 0.925);
+}
+
+.work .box:nth-child(6)::after,
+.work .box:nth-child(1)::after {
+  width: 758px;
+  height: 550px;
+  background-color: rgba(18, 22, 25, 0.925);
+}
+
+.work .box:hover::after {
+  opacity: 1;
+}
+
+.work .box .icon,
+.work .box .text {
+  position: relative;
+  z-index: 4;
+}
+
+.work .box p {
+  color: #fff;
+  margin-top: 20px;
+}
+
+.work .box .icon {
+  margin-top: 25%;
+}
+
+.iconWork {
+  position: absolute;
+  width: 100%;
+}
+
+.iconWork:nth-child(1) {
+  left: 120px;
+}
+
+.iconWork:nth-child(2) {
+  right: 120px;
+}
 /* .......................Work............. */
