Blog Section Added

--- a/src/App.css
+++ b/src/App.css
@@ -619,4 +619,33 @@ h3 {
 .iconWork:nth-child(2) {
   right: 120px;
 }
+
 /* .......................Work............. */
+/* .......................Blog............. */
+.blog .heading {
+  text-align: center;
+}
+
+.blog .text {
+  margin: 0;
+}
+
+.blog span {
+  opacity: 0.5;
+  font-size: 15px;
+}
+
+.blog h2 {
+  margin: 20px 0px;
+}
+
+.blog a {
+  color: #38d16a;
+  display: block;
+  line-height: 20px;
+}
+
+.blog a .icon {
+  padding-top: 15px;
+}
+/* .......................Blog............. */
