--- a/src/App.css
+++ b/src/App.css
@@ -649,3 +649,20 @@ h3 {
   padding-top: 15px;
 }
 /* .......................Blog............. */
+/* .......................Footer............. */
+footer {
+  background-color: #08071c;
+  padding: 100px 0 0 0;
+  color: #fff;
+}
+
+footer p {
+  color: #fff;
+  margin: 20px 0;
+}
+
+footer .socialIcon i{
+  background-color: #fff;
+  border: 1px solid #fff;
+}
+/* .......................Footer............. */
