--- a/src/App.css
+++ b/src/App.css
@@ -90,7 +90,7 @@ header.active {
     top: 75px;
     transition: 0.5s;
     width: 100%;
-    height: 30vh;
+    height: 60vh;
     z-index: 5;
   }
 
@@ -576,14 +576,14 @@ h3 {
 .work .box:nth-child(4)::after,
 .work .box:nth-child(3)::after,
 .work .box:nth-child(2)::after {
-  width: 380px;
+  width: 100%;
   height: 550px;
   background-color: rgba(18, 22, 25, 0.925);
 }
 
 .work .box:nth-child(6)::after,
 .work .box:nth-child(1)::after {
-  width: 758px;
+  width: 100%;
   height: 550px;
   background-color: rgba(18, 22, 25, 0.925);
 }
@@ -662,7 +662,87 @@ footer p {
 }
 
 footer .socialIcon i{
-  background-color: #fff;
-  border: 1px solid #fff;
+  background-color: transparent;
+  border: 2px solid #fff;
+  margin: 5px;
+}
+
+footer h2 {
+  margin-bottom: 30px;
+  font-size: 20px;
+}
+
+footer li {
+  color: #fff;
+  margin-bottom: 15px;
+}
+
+footer li::before {
+  content: ".";
+  font-size: 40px;
+  vertical-align: middle;
+  line-height: 10px;
+  margin-right: 20px;
+  color: #38d16a;
+}
+
+footer .box p {
+  margin: 0;
+  margin-top: 15px;
+}
+
+footer span {
+  color: #38d16a;
+  opacity: 1;
+}
+
+footer .icon {
+  margin-top: 20px;
+  display: flex;
+}
+
+footer .icon i{
+  color: #38d16a;
+  margin-right: 20px;
+  width: 20px;
+  height: 20px;
+}
+
+.legal {
+  display: flex;
+  justify-content: space-between;
+  border-top: 1px solid rgba(255, 255, 255, 0.5);
+  margin-top: 70px;
+  padding: 20px 0;
 }
 /* .......................Footer............. */
+/* .......................Responsive Design............. */
+
+@media screen and (max-width: 768px) {
+  .left, .right {
+    width: 100%;
+  }
+  .home .container {
+    flex-direction: column;
+    flex-direction: column-reverse;
+  }
+
+  .home {
+    height: 200vh;
+  }
+
+  .home .img {
+    width: 100%;
+    height: 50%;
+    position: relative;
+  }
+
+  .home img {
+    width: 100%;
+    height: 100%;
+    position: relative;
+    transform: scale(1);
+  }
+}
+
+/* .......................Responsive Design............. */
