--- a/src/App.css
+++ b/src/App.css
@@ -661,7 +661,7 @@ footer p {
   margin: 20px 0;
 }
 
-footer .socialIcon i{
+footer .socialIcon i {
   background-color: transparent;
   border: 2px solid #fff;
   margin: 5px;
@@ -701,7 +701,7 @@ footer .icon {
   display: flex;
 }
 
-footer .icon i{
+footer .icon i {
   color: #38d16a;
   margin-right: 20px;
   width: 20px;
@@ -719,7 +719,8 @@ footer .icon i{
 /* .......................Responsive Design............. */
 
 @media screen and (max-width: 768px) {
-  .left, .right {
+  .left,
+  .right {
     width: 100%;
   }
   .home .container {
@@ -728,12 +729,12 @@ footer .icon i{
   }
 
   .home {
-    height: 200vh;
+    height: 134vh;
   }
 
   .home .img {
     width: 100%;
-    height: 50%;
+    height: 100%;
     position: relative;
   }
 
@@ -743,6 +744,107 @@ footer .icon i{
     position: relative;
     transform: scale(1);
   }
+
+  .grid {
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .skill .content,
+  .about .container {
+    flex-direction: column;
+  }
+
+  .about img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+
+  .about .img::after {
+    display: none;
+  }
+
+  .wrapper .container {
+    max-width: 80%;
+  }
+
+  .skill .right {
+    padding: 0;
+  }
+
+  .work {
+    height: 100%;
+  }
+
+  .work .content {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 20vh);
+  }
+
+  .work .box:nth-child(1) {
+    grid-column-start: 1;
+    grid-column-end: 1;
+    grid-row-start: 1;
+    grid-row-end: 5;
+  }
+
+  .work .box:nth-child(2) {
+    grid-column-start: 1;
+    grid-column-end: 7;
+    grid-row-start: 5;
+    grid-row-end: 8;
+  }
+
+  .work .box:nth-child(3) {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    grid-row-start: 8;
+    grid-row-end: 11;
+  }
+
+  .work .box:nth-child(4) {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    grid-row-start: 11;
+    grid-row-end: 14;
+  }
+
+  .work .box:nth-child(5) {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    grid-row-start: 14;
+    grid-row-end: 17;
+  }
+
+  .work .box:nth-child(6) {
+    grid-column-start: 1;
+    grid-column-end: 9;
+    grid-row-start: 17;
+    grid-row-end: 20;
+  }
+
+  .work .box:nth-child(5)::after,
+  .work .box:nth-child(4)::after,
+  .work .box:nth-child(3)::after,
+  .work .box:nth-child(2)::after, 
+  .work .box:nth-child(1)::after, 
+  .work .box:nth-child(6)::after {
+    width: 100%;
+    height: 550px;
+    background-color: rgba(18, 22, 25, 0.925);
+  }
+
+  footer .grid1 {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+
+.pageContent {
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 /* .......................Responsive Design............. */
